--- a/womenshop.css
+++ b/womenshop.css
@@ -133,3 +133,8 @@ button:hover {
     padding-right: 100px;
     padding-left: 100px;
 }
+.btn1{
+    padding-right: 100px;
+    padding-left: 100px;
+    margin-top: 42px;
+}
