--- a/arouani.css
+++ b/arouani.css
@@ -269,7 +269,7 @@ ul{
   transition: all 0.5s ease;
 }
 .footer-col .social-links a:hover{
-  color: #24262b;
+  color: #303236;
   background-color: #ffffff;
 }
 
